# ProDM

./: CMakeLists.txt  README.md  build_script.sh
app/: CMakeLists.txt
app/GE/parallel/: CMakeLists.txt  refactorGE.cpp  refactorGE_SZ3.cpp  refactorGE_SZ3_delta.cpp  testGE_VTOT.cpp  testGE_VTOT_SZ3.cpp  testGE_VTOT_SZ3_delta.cpp
app/GE/sequential/: CMakeLists.txt  halving_Vtot.cpp  halving_Vtot_general.cpp  halving_Vtot_sz3.cpp  halving_Vtot_sz3delta.cpp  refactor_data.cpp
app/MuMMI/analysis/: README.txt  analysis-aa-rmsf.py  contact_map_aa.py  trans_contact_map.py  trans_rmsd.py
include/: qoi_utils.hpp
include/MDR/: RefactorUtils.hpp  Synthesizer4GE.hpp
include/MDR/BitplaneEncoder/: PerBitBPEncoder.hpp  WeightedNegaBinaryBPEncoder.hpp  WeightedPerBitBPEncoder.hpp
include/MDR/Decomposer/: DecomposerInterface.hpp  MGARD.hpp
include/MDR/Interleaver/: DirectInterleaver.hpp  Interleaver.hpp  InterleaverInterface.hpp
include/MDR/LosslessCompressor/: DefaultLevelCompressor.hpp  ZSTD.hpp
include/MDR/Reconstructor/: ComposedReconstructor.hpp
include/MDR/Refactor/: ComposedRefactor.hpp
include/MDR/Retriever/: FileRetriever.hpp
include/MDR/SizeInterpreter/: GreedyBasedSizeInterpreter.hpp
include/PDR/Approximator/: Approximator.hpp  ApproximatorInterface.hpp  DummyApproximator.hpp  SZApproximator.hpp
include/PDR/Reconstructor/: ApproximationBasedDeltaReconstructor.hpp  ApproximationBasedReconstructor.hpp  Reconstructor.hpp  ReconstructorInterface.hpp
include/PDR/Refactor/: ApproximationBasedDeltaRefactor.hpp  ApproximationBasedRefactor.hpp  Refactor.hpp  RefactorInterface.hpp
test/: CMakeLists.txt  test_mdr_reconstructor.cpp  test_mdr_refactor.cpp  test_pdr_reconstructor.cpp  test_pdr_refactor.cpp
